infra/nginx/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: vou-system.com
      http:
        paths:
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port: 
                  number: 3000 
          - path: /api/user-management/
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port: 
                  number: 3000
          - path : /api/event_query/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-query-srv
                port: 
                  number: 3000
          - path: /api/event_command/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-command-srv
                port: 
                  number: 3000
          - path: /api/image/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: image-srv
                port: 
                  number: 3000 
          - path: /api/game/
            pathType: Prefix
            backend:
              service:
                name: game-srv
                port: 
                  number: 3000 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-srv
                port: 
                  number: 3000
